fix collapse animation at start

--- a/src/components/Collapse/collapse.scss
+++ b/src/components/Collapse/collapse.scss
@@ -23,7 +23,7 @@
 	}
 
   .collapse-content-inner {
-    padding: 2%;
+    padding: 2%;    
   }
 
 }
@@ -63,34 +63,41 @@
     visibility: visible;
     display: flex;
 	}
+  
 }
 
+.collapse.initial-collapsed {
+  .collapse-content {
+    animation: none !important;
+    opacity: 0;
+    height:0;
+  }
+}
 
 
 
 @keyframes dropdown-down {
   0% {
-    //opacity: 0;
-    transform: translateY(-100%);
+    opacity: 0;
+    transform: translateY(-100%);    
     height: 0;
   }
   100% {
-    // opacity: 1;
-    transform: translateY(0);
+    opacity: 1;
+    transform: translateY(0);    
     height: auto;
   }
 }
 
 @keyframes dropdown-up {
   0% {
-    // opacity: 1;
-    transform: translateY(0);
-    height: auto;
+    opacity: 1;
+    transform: translateY(0);    
+    max-height: 1000px;
   }
   100% {
-    // opacity: 0;
-    transform: translateY(-100%);
-    visibility: hidden;
-    height: 0;
+    opacity: 0;
+    transform: translateY(-100%);        
+    max-height: 0;
   }
 }
